--- a/Models_for_TrainTest.ipynb
+++ b/Models_for_TrainTest.ipynb
@@ -65,7 +65,7 @@
     "# k nearest neighbour\n",
     "classifier = KNeighborsClassifier(n_neighbors=n)\n",
     "classifier.fit(train_data, train_label)\n",
-    "y_pred = classifier.predict(X_test)\n",
+    "y_pred = classifier.predict(test_data)\n",
     "\n",
     "\n",
     "# k means\n",
@@ -76,7 +76,7 @@
     "\n",
     "# Gaussian Mixture model\n",
     "gmm = GaussianMixture(n_components=2).fit(train+test)\n",
-    "labels = gmm.predict(test)\n",
+    "labels = gmm.predict(test_data)\n",
     "# number of components and models presented\n",
     "n_components = np.arange(1, 25)\n",
     "models = [GaussianMixture(n).fit(X) for n in n_components]\n",
@@ -120,7 +120,7 @@
     "encoder.fit(train_label)\n",
     "encoded_loc = encoder.transform(train_label)\n",
     "# convert integers to dummy variables\n",
-    "dummy_loc = np_utils.to_categorical(encoded_loc)\n",
+    "dummy_label = np_utils.to_categorical(encoded_label)\n",
     "\n",
     "\n",
     "# model generation with single hidden layer\n",
@@ -130,7 +130,7 @@
     "model.compile(loss='categorical_crossentropy',optimizer='adam',metrics=['accuracy'])\n",
     "train_histt = model.fit(train_data, dummy_loctrain, epochs=100, batch_size=32, verbose=1)\n",
     "\n",
-    "scores = model.evaluate(SRItest, dummy_loctest, batch_size=32)\n",
+    "scores = model.evaluate(test_data, dummy_loctest, batch_size=32)\n",
     "print('Test loss=%s'% scores[0])\n",
     "print('Test accuracy=%s'% scores[1])\n"
    ]
